# sun0

./: .editorconfig  .gitignore  README.md  TODO.md  build.sh  meson.build  meson_options.txt  tags.8sBfA2
clean/: build.ninja  compile_commands.json
clean/meson-logs/: meson-log.txt
clean/src/engine/: version.hpp
include/sun0/: gui.hpp  meson.build  physics.hpp  resources.hpp  scene.hpp  sun.hpp  version.hpp.in
include/sun0/audio/: sound_stream.hpp
include/sun0/audio/decoders/: decoder.hpp
include/sun0/common/: config.hpp  types.hpp
include/sun0/common/shapes/: convex.hpp  rectangle.hpp  shape.hpp
include/sun0/core/: application.hpp  clock.hpp
include/sun0/core/filesys/: filesys.hpp  input_stream.hpp  toml.hpp
include/sun0/core/input/: input_map.hpp  keyboard.hpp  mouse.hpp
include/sun0/graphics/: camera.hpp  drawable.hpp  framebuffer.hpp  image.hpp  light2D.hpp  renderer.hpp  shape2D.hpp  texture.hpp
include/sun0/graphics/opengl/: framebuffer.hpp  renderer.hpp  shader.hpp  texture.hpp
include/sun0/gui/: gui_system.hpp  text_button.hpp  widget.hpp
include/sun0/math/: math.hpp  matrix4.hpp  vector2.hpp
include/sun0/physics/: physics_server.hpp  rigid_body.hpp
include/sun0/resources/: resource.hpp  resource_cache.hpp
include/sun0/scene/: animation.hpp  scene_tree.hpp
include/sun0/script/: script.hpp  script_context.hpp
include/sun0/system/: component.hpp
res/: flat.glsl  light.glsl  test.lua  textured.glsl
src/demos/: meson.build
src/demos/balls/: balls.cpp
src/demos/gui/: gui.cpp
src/demos/hello/: hello.cpp
src/demos/pong/: pong.cpp
src/demos/sandbox/: sandbox.cpp
src/engine/: audio.hpp  gen_headers.sh  graphics.hpp  meson.build  script.hpp  sun.hpp  sun.hpp.in
src/engine/audio/: audio_server.cpp  audio_server.hpp  sound_buffer.cpp  sound_buffer.hpp  sound_source.cpp  sound_source.hpp  sound_stream.cpp  sound_stream.hpp
src/engine/audio/decoders/: decoder.hpp  vorbis_decoder.cpp  vorbis_decoder.hpp
src/engine/audio/openal/: audio_server.cpp  audio_server.hpp  sound_stream.hpp
src/engine/common/: color.cpp  color.hpp  config.hpp  int.hpp  object.hpp  opengl.hpp  reference.hpp  time.cpp  time.hpp  types.hpp  variant.hpp
src/engine/common/shapes/: circle.hpp  convex.hpp  primitive_shape.hpp  rectangle.hpp
src/engine/core/: application.cpp  application.hpp  clock.cpp  clock.hpp  context.cpp  context.hpp  core.hpp  event.hpp  logger.cpp  logger.hpp  main.hpp  window.cpp  window.hpp
src/engine/core/filesys/: filesys.cpp  filesys.hpp  input_stream.cpp  input_stream.hpp  toml.hpp
src/engine/core/input/: input_map.cpp  joystick.hpp  keyboard.cpp  keyboard.hpp  mouse.hpp
src/engine/graphics/: camera.cpp  camera.hpp  drawable.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  gpu_object.hpp  image.cpp  image.hpp  index_buffer.cpp  index_buffer.hpp  light2D.cpp  light2D.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shape2D.cpp  shape2D.hpp  sprite.cpp  sprite.hpp  sprite_batch.cpp  sprite_batch.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_layout.hpp
src/engine/graphics/opengl/: framebuffer.cpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  index_buffer.cpp  index_buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/engine/gui/: bar.cpp  bar.hpp  container.hpp  frame.cpp  frame.hpp  gui_system.cpp  gui_system.hpp  text_button.cpp  widget.cpp  widget.hpp
src/engine/math/: math.hpp  matrix4.cpp  matrix4.hpp  rect.hpp  vector2.hpp  vector3.hpp
src/engine/pch/: solpch.h  stdpch.h
src/engine/physics/: contact_listener.cpp  contact_listener.hpp  physics_rasterizer.cpp  physics_rasterizer.hpp  physics_server.cpp  physics_server.hpp  raycast.cpp  raycast.hpp  rigid_body.cpp  rigid_body.hpp
src/engine/resources/: resource.cpp  resource.hpp  resource_cache.cpp  resource_cache.hpp
src/engine/scene/: animatable.hpp  animation.cpp  animation.hpp  entity.cpp  entity.hpp  scene_manager.cpp  scene_manager.hpp  scene_tree.cpp  scene_tree.hpp
src/engine/script/: script.cpp  script.hpp  script_api.cpp  script_context.cpp  script_context.hpp
src/engine/system/: component.cpp  component.hpp  system.cpp  system.hpp
