pong_exec = executable('sun-pong', ['pong/pong.cpp'],
  include_directories: sun_includes,
  link_with: sun_lib,
  install: true
)

#sandbox_exec = executable('sun-sandbox', ['sandbox/sandbox.cpp'],
#  include_directories: sun_includes,
#  link_with: sun_lib,
#  install: true
#)

#balls_exec = executable('sun-balls', ['balls/balls.cpp'],
#  include_directories: sun_includes,
#  link_with: sun_lib,
#  install: true
#)
